<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.miara.yagel.maspera.CreatUserActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="378dp"
        android:layout_height="467dp"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/alert_light_frame"
        android:text="@string/enter_your_information"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/username_et_c"
        android:layout_width="190dp"
        android:layout_height="39dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/please_enter_your_username_here"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_text"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/creat_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/pass"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/pass_et_c1"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/please_enter_your_password_here"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex_et_c" />

    <TextView
        android:id="@+id/creat_pass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/confirm_password"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/creat_pass1" />

    <EditText
        android:id="@+id/pass_et_c2"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_password_again"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_et_c1" />

    <TextView
        android:id="@+id/creat_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/e_mail"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/creat_pass2" />

    <EditText
        android:id="@+id/e_mail_c"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_your_mail"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_et_c2" />

    <TextView
        android:id="@+id/creat_hometown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/hometown"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/creat_email" />

    <EditText
        android:id="@+id/hometown_c"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_where_you_living"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/e_mail_c" />

    <Button
        android:id="@+id/creat_btm"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/creat_costumer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/last_name"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/sex"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="18dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/last_name_et_c"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_your_last_name"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_et_c" />

    <EditText
        android:id="@+id/phone_et_c"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_et_c" />

    <EditText
        android:id="@+id/sex_et_c"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_yout_sex"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_et_c" />

    <TextView
        android:id="@+id/sms_kod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="24dp"
        android:text="*sorry but not all data field as exepted, please check."
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>