<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.miara.yagel.maspera.ManageBarActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
        <TextView
            android:id="@+id/in_title_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/in_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/titlebar"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/in_title_n"
            app:layout_constraintStart_toEndOf="@+id/in_title_n" />

        <TextView
            android:id="@+id/in_des_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/des_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/in_title_n" />

        <EditText
            android:id="@+id/in_des"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:ems="10"
            android:hint="@string/description_bar"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/in_des_n"
            app:layout_constraintStart_toEndOf="@+id/in_des_n" />

        <TextView
            android:id="@+id/in_im_n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/im_bar_up" />

        <ImageView
            android:id="@+id/bar_pic"
            android:layout_gravity="center_horizontal"
            android:layout_width="150dp"
            android:layout_height="150dp" android:contentDescription="TODO" />

        <Button
            android:id="@+id/b_up_im"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_b" />

    </LinearLayout>




</ScrollView>
