<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.miara.yagel.maspera.LoginActivity">

    <TextView
        android:id="@+id/the_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/alert_light_frame"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="378dp"
        android:layout_height="213dp"
        android:layout_marginTop="8dp"
        android:background="@android:drawable/alert_light_frame"
        android:text="@string/login_quart"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/the_end" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="311dp"
        android:layout_height="92dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="108dp"
        android:gravity="top|bottom|start"
        android:text="@string/eara1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/creat_pass1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/pass"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/phone_text" />

    <EditText
        android:id="@+id/pass_et"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/please_enter_your_password_here"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/creat_pass1"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phone_et"
        android:layout_width="188dp"
        android:layout_height="32dp"
        android:layout_marginStart="150dp"
        android:ems="10"
        android:hint="@string/enter_your_phone_number"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/phone_text"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btm"
        style="@android:style/Widget.Button.Inset"
        android:layout_width="293dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/manager_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/forget_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/creat_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/guest_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/get_in_as_a_guest"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/creat_tv" />

    <TextView
        android:id="@+id/creat_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/creat_user"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guest_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/forget_tv" />

    <Button
        android:id="@+id/manager_btm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="8dp"
        android:text="@string/rate_barber"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btm" />

</android.support.constraint.ConstraintLayout>
